--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>bolsaformacaoui</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
+    <script src="https://unpkg.com/regenerator-runtime@0.13.1/runtime.js"></script>
   </head>
   <body>
     <div id="app"></div>
